# sysproj-team-e

./: .gitignore  nachos_new.files  nachos_new.includes
code/: Makefile.define-origin  Makefile.define-user  install.sh
code/filesys/: directory.cc  directory.h  filehdr.cc  filehdr.h  filesys.cc  filesys.h  fstest.cc  openfile.cc  openfile.h  synchdisk.h
code/machine/: console.cc  console.h  disk.cc  interrupt.cc  interrupt.h  machine.cc  machine.h  mipssim.cc  network.cc  sysdep.cc  translate.cc
code/network/: SynchPost.cc  SynchPost.h  nettest.cc  post.cc  post.h  securepost.cc  securepost.h
code/test/: ags_test.c  bashTestStep2.sh  cat.c  cd.c  clear_scrn.c  complex_program.c  connection.c  connection2.c  deleteNonEmptyDir.c  demo.c  demorcv.c  display.c  earlyHalt.c  exec_test.c  file_test.c  filesys.c  filesysTest.c  filesysTest2.c  filesysTestChaosFileIO.c  filesysTestFileIo.c  filesysTestIntegration.c  fread.c  fs_test.c  (+54 more)
code/unit_tests/: CMakeLists.txt  README
code/unit_tests/common/: CMakeLists.txt  test_utils.h
code/unit_tests/exception_test/: CMakeLists.txt  exception_test.cc
code/unit_tests/filesys_test/: CMakeLists.txt  filesys_test.cc  filesys_test.pro
code/unit_tests/mocks/: InterruptMock.h  console_mock.h  machine_mock.h  synchconsole_mock.h
code/unit_tests/network_test/: CMakeLists.txt  network_test.cc  network_test.pro
code/unit_tests/synchconsole_test/: CMakeLists.txt  synchconsole_test.cc  synchconsole_test.pro
code/unit_tests/vm_test/: CMakeLists.txt  vm_test.cc
helpful/: git_commands
report/: TODO Step 4  questions step 5  shell  step2  step3  step4  step5  step6
(+54 files in other folders)
